--- a/notebooks/spacy/acrony-finder-spacy.ipynb
+++ b/notebooks/spacy/acrony-finder-spacy.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "43c69324-9c02-4150-8d88-c1273e6a462b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "a46b99b4-c0f3-4521-af4c-22569c566a01",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "'3.8.2'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "9948924c-5ee8-4dfa-baf0-21b207193068",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "b04b1143-64d8-4269-80c6-6845cc003ba0",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "2ad85111-47ea-46d5-a001-7d43e84b8cf8",
    "metadata": {},
    "outputs": [],
@@ -82,18 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "id": "5b7b4a67-6f21-4a38-9c21-9a19d6de2583",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample text\n",
-    "text = \"California Xgb is a great tool for machine learning. Another example is AI. NTLK is very slow and not recommended high speed ML scenarios\""
+    "text = \"California Xgb is a great tool for machine learning. Another example is AI. \\\n",
+    "NTLK is very slow and not recommended high speed ML scenarios. XGBoost, Claude, PrettyMetrics, Rl, Gan, Rnn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "id": "b6fec4c5-1706-47ef-9456-fe3515ed621a",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "id": "91980abc-cdf8-401b-b7d5-fdb42026470a",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "1976735e-87df-4ecf-8b20-94aae4c7afb7",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "id": "6d2b4f3a-963a-481f-affb-2f5b3a085c02",
    "metadata": {},
    "outputs": [
@@ -137,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acronyms found: ['Xgb', 'AI', 'NTLK', 'ML']\n"
+      "Acronyms found: ['Xgb', 'AI', 'NTLK', 'ML', 'Gan', 'Rnn']\n"
      ]
     }
    ],
