--- a/notebooks/zzemp/zzemp.ipynb
+++ b/notebooks/zzemp/zzemp.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0c10588e-e9e7-4b8c-b92b-91104a273df0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'conda env: ml312-2024; pyv: 3.12.7 | packaged by Anaconda, Inc. | (main, Oct  4 2024, 13:27:36) [GCC 11.2.0]'"
+       "'conda env: ml311; pyv: 3.11.10 (main, Oct  3 2024, 07:29:13) [GCC 11.2.0]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,8 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c2ccb592-b983-4856-a241-5898cab06699",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyutil' has no attribute 'ps2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpyu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mps2\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhaystack-ai ollama-haystack python-dotenv\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyutil' has no attribute 'ps2'"
+     ]
+    }
+   ],
+   "source": [
+    "print(pyu.ps2(\"haystack-ai ollama-haystack python-dotenv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e290a4be-0793-4902-b10b-44429cb937f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -55,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
