--- a/notebooks/basics/seconds2timeformat.ipynb
+++ b/notebooks/basics/seconds2timeformat.ipynb
@@ -58,6 +58,61 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fd06a598-d52f-4cf9-b7eb-6aa04185fcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_time(seconds):\n",
+    "    hours = seconds // 3600\n",
+    "    minutes = (seconds % 3600) // 60\n",
+    "    remaining_seconds = seconds % 60\n",
+    "\n",
+    "    result = []\n",
+    "    if hours > 0:\n",
+    "        result.append(f\"{hours} hour{'s' if hours > 1 else ''}\")\n",
+    "    if minutes > 0:\n",
+    "        result.append(f\"{minutes} minute{'s' if minutes > 1 else ''}\")\n",
+    "    if remaining_seconds > 0 or not result:  # Always include seconds\n",
+    "        result.append(f\"{remaining_seconds} second{'s' if remaining_seconds > 1 else ''}\")\n",
+    "\n",
+    "    return \" \".join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "470e0fff-f26a-4d3f-9a74-a85c8e7d1b24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62 hours 21 minutes 32 seconds\n",
+      "1 hour 2 minutes 40 seconds\n",
+      "58 minutes 45 seconds\n",
+      "1 minute 18 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(format_time(224492))  # 62 hours 21 minutes 32 seconds\n",
+    "print(format_time(3760))    # 1 hour 2 minutes 40 seconds\n",
+    "print(format_time(3525))    # 58 minutes 45 seconds\n",
+    "print(format_time(78))      # 1 minute 18 seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d15a2926-fc41-4d0b-97b8-d0f68892cb4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
