--- a/notebooks/basics/sys-traceback-1.ipynb
+++ b/notebooks/basics/sys-traceback-1.ipynb
@@ -53,8 +53,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e290a4be-0793-4902-b10b-44429cb937f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fd06a598-d52f-4cf9-b7eb-6aa04185fcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide_numbers(a, b):\n",
+    "    return a / b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f60c6b14-b39c-4c6a-a8c8-60f021da004b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_567376/663402224.py\", line 2, in <module>\n",
+      "    result = divide_numbers(10, 0)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/tmp/ipykernel_567376/2831072420.py\", line 2, in divide_numbers\n",
+      "    return a / b\n",
+      "           ~~^~~\n",
+      "ZeroDivisionError: division by zero\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = divide_numbers(10, 0)\n",
+    "    print(\"Result:\", result)\n",
+    "except Exception:\n",
+    "    print(\"An error occurred!\")\n",
+    "    # raise  # Reraises the exception to show the traceback\n",
+    "    print(traceback.format_exc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a474ffbf-c4f8-4526-907e-fa0a32b77ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a3c55fe-d668-44d1-ba31-3215cf77710e",
    "metadata": {},
    "outputs": [],
    "source": []
