--- a/notebooks/pandas/csv-monitor.ipynb
+++ b/notebooks/pandas/csv-monitor.ipynb
@@ -58,6 +58,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd06a598-d52f-4cf9-b7eb-6aa04185fcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "# Filepath to the city.csv file\n",
+    "file_path = 'city.csv'\n",
+    "\n",
+    "def monitor_csv(file_path):\n",
+    "    \"\"\"Monitor the CSV file for changes and print the row count every 2 seconds.\"\"\"\n",
+    "    previous_row_count = 0\n",
+    "\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # Read the CSV file\n",
+    "            df = pd.read_csv(file_path)\n",
+    "            current_row_count = len(df)\n",
+    "\n",
+    "            # Check if the row count has changed\n",
+    "            if current_row_count != previous_row_count:\n",
+    "                print(f\"{current_row_count} rows\")\n",
+    "                previous_row_count = current_row_count\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"File not found. Make sure the file exists.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "        # Wait for 2 seconds before checking again\n",
+    "        time.sleep(2)\n",
+    "\n",
+    "# Run the monitoring function\n",
+    "if __name__ == \"__main__\":\n",
+    "    monitor_csv(file_path)"
+   ]
   }
  ],
  "metadata": {
