--- a/notebooks/sys/recursion.ipynb
+++ b/notebooks/sys/recursion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "0c10588e-e9e7-4b8c-b92b-91104a273df0",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "'conda env: ml311; pyv: 3.11.10 (main, Oct  3 2024, 07:29:13) [GCC 11.2.0]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "c2ccb592-b983-4856-a241-5898cab06699",
    "metadata": {},
    "outputs": [
@@ -55,6 +55,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e290a4be-0793-4902-b10b-44429cb937f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0fefc15e-5692-4414-91d4-e1a0ea7e0eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.getrecursionlimit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e38918bf-cbf1-498c-a5be-d32585c30cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8b02f7e4-829c-4885-9eb1-25d312df99ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sys.getrecursionlimit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "059a7455-b1c6-4c9e-ac53-9871c2067361",
    "metadata": {},
    "outputs": [],
    "source": []
