--- a/notebooks/leetcode/1-two-sums.ipynb
+++ b/notebooks/leetcode/1-two-sums.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "db25c914-1252-4bae-8dbe-3a20e361bd73",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0c10588e-e9e7-4b8c-b92b-91104a273df0",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'conda env: ml311; pyv: 3.11.10 (main, Oct  3 2024, 07:29:13) [GCC 11.2.0]'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c2ccb592-b983-4856-a241-5898cab06699",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "e290a4be-0793-4902-b10b-44429cb937f9",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "091477f3-e55f-4542-8e04-cc02f59bfcc5",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "e54d6c8b-f5a8-4e5f-bab3-23aeb0902c0b",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "(0, 1)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "baaeeea9-459a-4ec4-a383-2e5233192833",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,6 +128,53 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "383c5eec-4f8e-44eb-9f10-7db7cae5e252",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce6a8bb9-1cfc-491f-b091-224a0f9cff4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variant 1: Using a single return statement\n",
+    "class Solution:\n",
+    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "        numToIndex = {}\n",
+    "        for i, num in enumerate(nums):\n",
+    "            diff = target - num\n",
+    "            if diff in numToIndex:\n",
+    "                return [numToIndex[diff], i]\n",
+    "            numToIndex[num] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d3f0ae08-0bb4-46c8-9323-ee74287b5ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().twoSum([2,7,11,15], 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8d0e451-bc8e-48c3-b481-e41ae3ea3d06",
    "metadata": {},
    "outputs": [],
    "source": []
