--- a/notebooks/pandas/zzemp.ipynb
+++ b/notebooks/pandas/zzemp.ipynb
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "print(pyu.ps2(\"haystack-ai ollama-haystack python-dotenv\"))"
+    "print(pyu.ps2(\"pandas\"))"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
